# crypto_quant_research

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  Makefile  README.md  pyproject.toml
configs/: strategy_mean_rev_example.yaml
docs/: ACADEMIC_RESEARCH_CANDIDATES.md  ARCHITECTURE.md  PORTFOLIO_PIECE.md
notebooks/: 01_hypothesis.ipynb  01b_hypothesis_v2_stretched_vp.ipynb  01c_hypothesis_v3_tsmom.ipynb  01d_hypothesis_v4_tsmom_consensus.ipynb  01e_hypothesis_v5_overnight_max.ipynb  02_data_quality.ipynb  03_is_optimization.ipynb  04_oos_validation.ipynb  05_walkforward.ipynb  06_holdout.ipynb  07_multicoin.ipynb  08_postmortem.ipynb
results/: POSTMORTEM.md
results/tables/: is_search_log.csv  is_search_log_v2_stretched_vp.csv  is_search_log_v3_tsmom.csv  is_search_log_v4_tsmom_consensus.csv  is_search_log_v5_overnight_max.csv  walkforward_v3_tsmom.csv  walkforward_v4_tsmom_consensus.csv
scripts/: run_pipeline.sh
src/quant/: __init__.py
src/quant/analytics/: __init__.py  momentum.py  volume_profile.py
src/quant/backtest/: __init__.py  costs.py  engine.py  execution.py  metrics.py
src/quant/data/: __init__.py  loader.py  quality.py  splitter.py
src/quant/optimization/: __init__.py  grid_search.py
src/quant/reporting/: __init__.py  plots.py  tables.py
src/quant/risk/: __init__.py  drawdown.py  sizing.py
src/quant/strategies/: __init__.py  base.py  mean_reversion.py  overnight_max.py  stretched_vp.py  tsmom.py  tsmom_consensus.py
src/quant/validation/: __init__.py  bootstrap.py  deflated_sharpe.py  walk_forward.py
tests/: conftest.py  test_bootstrap.py  test_costs.py  test_data_split_integrity.py  test_deflated_sharpe.py  test_drawdown.py  test_grid_search.py  test_mean_reversion.py  test_momentum.py  test_no_lookahead.py  test_stretched_vp.py  test_tsmom.py  test_volume_profile.py  test_walk_forward.py
